5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1834_1274.log
== TEST (2019-06-25 16:10:31) 
-- CODE:
frutas = array([[3,-4, 0], [5, 2,-1]])
print(frutas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    frutas = array([[3,-4, 0], [5, 2,-1]])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:15) 
-- CODE:
from numpy import*
from numpy.linalg import *
frutas = array([[3,-4, 0], [5, 2,-1]])
print(frutas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:25) 
-- CODE:
from numpy import*
from numpy.linalg import *
frutas = array(eval([[3,-4, 0], [5, 2,-1]])
print(frutas)

-- ERROR:
File "XXXX", line 4
    print(frutas)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:35) 
-- CODE:
from numpy import*
from numpy.linalg import *
frutas = array([3,-4, 0], [5, 2,-1])
print(frutas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:49) 
-- CODE:
from numpy import*
from numpy.linalg import *
frutas = array([[3,-4, 0], [5, 2,-1]])
print(frutas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:15:37) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n.n),dtipe=int)
for i in range(0,n):
	for j in range(0,m):
		mat[i,j]=min(i,j)+1
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:08) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((nnn),dtipe=int)
for i in range(0,n):
	for j in range(0,m):
		mat[i,j]=min(i,j)+1
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:24) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n,n),dtipe=int)
for i in range(0,n):
	for j in range(0,m):
		mat[i,j]=min(i,j)+1
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:34) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,m):
		mat[i,j]=min(i,j)+1
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:16:46) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=min(i,j)+1
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:16:59) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=min(i,j)+1
print(mat)

-- EXECUTION TIME:
1.03612
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:18:30) 
-- CODE:
from numpy import*
from numpy.linalg import *
n = int(input('digite:  '))
mat=zeros((n,n),dtype=int)
for i in range(0,n):
	for j in range(0,n):
		mat[i,j]=min(i,j)+1
print(mat)
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
